# bintree

./: Main.hs  README.md  bintree.cabal
src/: BinTree.hs
test/: quickcheck.hs
